# PicoEPiano

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  test
.github/workflows/: add.yml  add_submodul.yml  build.yml  build_cmake.yml  del.yml  main.yml  manual_build.yml
.github/workflows  /: loadmodules.yml
include/: FreeRTOSConfig.h  arduino_compat.h  image.h  mdaEPiano.h  pico_hw.h  pico_userinterface.h  project_config.h
lib/audio/include/: audio_i2s.h
lib/encoder/: CMakeLists.txt
lib/encoder/include/: button_debounce.h  common.h  encoder.h  push_button.h  rotary_encoder.h
lib/encoder/piosrc/: button_debounce.pio  encoder.pio  rotary_encoder.pio
lib/encoder/src/: button_debounce.cpp  encoder.cpp  push_button.cpp  rotary_encoder.cpp
lib/lvgl/: CMakeLists.txt  custom.cmake  lv_conf.h
lib/oled/: CMakeLists.txt
lib/oled/include/: font.h  oled.h
lib/oled/src/: oled.cpp
lib/u8g2/: CMakeLists.txt
src/: main.cpp  main_orig.cpp  mdaEPiano.cpp  mdaEPiano.h  mdaEPianoData.h  menu_test.cpp  pico_hw.cpp  pico_input_value.cpp  pico_param_select.cpp  pico_program_select.cpp  pico_selection_list.cpp  usb_descriptors.c
